--- a/index.html
+++ b/index.html
@@ -188,19 +188,19 @@
   <section class="content__block-pictures">
     <h3 class="content__block-title title-decor">А можно в картинках?</h3>
     <picture class="content__block-pictures-pic sunset">
-      <img loading="lazy" class="picture" src="images/sunset.png" alt="Закат солнца у озера в горах"/>
+      <img loading="lazy" class="picture" src="images/sunset.png" alt="Летающие птицы на фоне заката и гор"/>
     </picture>
     <picture class="content__block-pictures-pic ice-cream">
-      <img loading="lazy" class="picture" src="images/ice-cream.png" alt="Мороженко с позитивными мордочками, украшенное сливками, фруктами и зонтиком"/>
+      <img loading="lazy" class="picture" src="images/ice-cream.png" alt="Мороженко с рожецами, украшенно трубочками и сливками"/>
     </picture>
     <picture class="content__block-pictures-pic tape">
-      <img loading="lazy" class="picture" src="images/tape.png" alt="Аудиокассета в окружении компьютерных значков типа стрелки и песочных часов"/>
+      <img loading="lazy" class="picture" src="images/tape.png" alt="Аудиокассета на фоне аудиоплеера"/>
     </picture>
     <picture class="content__block-pictures-pic books">
       <img loading="lazy" class="picture" src="images/books.png" alt="Кружка кофе с надписью real more на стопке книг"/>
     </picture>
     <picture class="content__block-pictures-pic street">
-      <img loading="lazy" class="picture" src="images/street.png" alt="Пустая улица в японском городе с видом на закат в фиолетовых тонах"/>
+      <img loading="lazy" class="picture" src="images/street.png" alt="Переулок с какой-то вывеской на японском языке"/>
     </picture>
   </section>
 </main>
